frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: blog-frontend
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: frontend-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP

          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 2
            failureThreshold: 15

          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"

            limits:
              memory: "512Mi"
              cpu: "500m"
