frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend

spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
